--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <div class="contact-icon">📧</div>
                     <div class="contact-info">
                         <h4>Email</h4>
-                        <p><a href="mailto:vaibhavandsparks@gmail.com">:vaibhavandsparks@gmail.com</a></p>
+                        <p><a href="mailto:vaibhavandsparks@gmail.com">vaibhavandsparks@gmail.com</a></p>
                     </div>
                 </div>
                 
